--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Topic :: Software Development :: Code Generators",
     "Topic :: Software Development :: Testing",
 ]
-dependencies = ["anyio>=4.5", "click>=8.2.0", "httpx>=0.27", "mcp", "pydantic>=2.0", "pyyaml>=6.0"]
+dependencies = ["anyio>=4.5", "click>=8.2.0", "httpx>=0.27", "jinja2>=3.0", "mcp", "pydantic>=2.0", "pyyaml>=6.0"]
 
 [project.optional-dependencies]
 dev = [
@@ -32,6 +32,7 @@ dev = [
     "black>=23.0.0",
     "mypy>=1.0.0",
     "bandit>=1.7.0",
+    "types-PyYAML>=6.0",
     "build>=1.0.0",
 ]
 
@@ -50,6 +51,21 @@ include = ["src/cursor_plans_mcp"]
 venvPath = "."
 venv = ".venv"
 reportAttributeAccessIssue = "none"
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = false
+disallow_untyped_decorators = false
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
 
 [tool.ruff.lint]
 select = ["E", "F", "I"]
